--- a/data-service/pom.xml
+++ b/data-service/pom.xml
@@ -31,6 +31,11 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+		<dependency>
+			<groupId>com.nes</groupId>
+			<artifactId>nes-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 
 
